--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha test/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "jscs": "^2.1.0",
     "mocha": "^2.2.5",
     "proxyquire": "^1.6.0",
+    "request": "^2.60.0",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0"
   }
