Update test names to be filterable by mocha cli

--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+dependencies:
+  post:
+    - bundle exec fake_sqs --daemonize --pid=.fake_sqs.pid:
+        background: true
 test:
-  override:
+  pre:
     - node_modules/jscs/bin/jscs lib test
