--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queue-fu",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An abstract worker queue which includes support for Amazon SQS.",
   "main": "lib/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "lodash": "^3.10.1"
   },
   "devDependencies": {
+    "axios": "^0.5.4",
     "chai": "^3.2.0",
     "jscs": "^2.1.0",
     "mocha": "^2.2.5",
